# transport_se

./: CMakeLists.txt  README  configure.sh
cmake/: HommeMacros.cmake  SetCompilerFlags.cmake
cmake/machineFiles/: anvil.cmake  babbage-mic.cmake  blues.cmake  carl.cmake  chrysalis.cmake  darwin.cmake  edison.cmake  jlse-iris.cmake  jlse.cmake  mira.cmake
libs/blas/: CMakeLists.txt  Makefile  Makefile.am  Makefile.blas  Makefile.in  config.status  configure  configure.ac
libs/lapack/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile.lapack  config.status  configure  configure.ac  dsyev.f
libs/linpack/: Makefile
libs/utils/: Makefile  derfc.c  nbits.c  precision.c  testnbits.c  thread_bind.c  timer.c  utils.h
src/: .#asp_tests.F90  SAVE.DIFF  advance_mod.F90  advance_mod.F90.bak  asp_tests.F90  baroclinic_inst_mod.F90  checksum_mod.F90  common_io_mod.F90  common_movie_mod.F90  interp_movie_mod.F90  interp_movie_mod.F90.bak1  pio_io_mod.F90  prim_main.F90  prim_movie_mod.F90  prim_movie_mod.F90.REORG  prim_movie_mod.F90.orig  prim_restart_mod.F90  restart_io_mod.F90  restart_mod.F90  surfaces_mod.F90  surfaces_mod.F90.SAVE  surfaces_mod.F90.orig  temp.out  temp2.out
src/preqx/: CMakeLists.txt  config.h.cmake.in
src/share/: Manager.F90  bndry_mod.F90  bndry_mod.F90~  control_mod.F90  cube_mod.F90  cube_mod.diff  cuda_mod.F90  dcmip_123_mod.F90  dcmip_wrapper_mod.F90  derivative_mod.F90  diff.out  dimensions_mod.F90  dof_mod.F90  dof_mod.F90~  domain_mod.F90  edge_mod.F90  element_mod.F90  element_mod.F90~  filter_mod.F90  global_norms_mod.F90  gridgraph_mod.F90  gridgraph_mod.F90~  interpolate_mod.F90  kinds.F90  linear_algebra_mod.F90  memfix.diff  memfix.diff~  mesh_mod.F90  metagraph_mod.F90  metagraph_mod.F90~  namelist_mod.F90  parallel_mod.F90  physical_constants.F90  physical_constants.F90~  physics_mod.F90  prim_advance_mod.F90  prim_advection_mod.F90  prim_driver_mod.F90  prim_si_mod.F90  prim_si_ref_mod.F90  (+10 more)
test/: CMakeLists.txt  dcmip1-1.nl  dcmip1-1.sh  explicit.nl.sed  explicit.nl.sed~  run.job  run.job~  run_ne120_perf.sh  run_ne120_tests.sh  run_ne120_tests_ng.sh  run_ne30_perf.sh  run_ne30_tests.sh  run_ne8_perf.sh  run_ne8_tests.sh  run_ne8_tests_ng.sh  run_quick_test.sh  run_quick_test_ng.sh  run_quick_test_ng_omp.sh  run_quick_test_omp.sh  temp.out
test/dcmip1-1/: CMakeLists.txt  dcmip1-1.nl  dcmip1-1.sh  dcmip1-1_error_norm.ncl  dcmip1-1_error_norm_ng.ncl  dcmip1-1_lat_lon.ncl  dcmip1-1_lat_lon_ng.ncl
test/dcmip1-2/: dcmip1-2.nl  dcmip1-2.sh  dcmip1-2_error_norm.ncl  dcmip1-2_error_norm_ng.ncl  dcmip1-2_lat_height.ncl  dcmip1-2_lat_height_ng.ncl
test/vcoord/: 12k_top-64i.ascii  12k_top-64m.ascii
utils/pio/: CMakeLists.txt
utils/pio/cmake/: FindNETCDF.cmake
utils/timing/: ChangeLog  Makefile
