AUTOMAKE_OPTIONS = foreign
# builds a version of the blas library
# with only the code needed by HOMME.
# and executable preqx.
lib_LIBRARIES = libblas.a
libblas_a_SOURCES = 	dasum.f daxpy.f dcopy.f ddot.f  dgemm.f dgemv.f dger.f\
			dnrm2.f drot.f  drotg.f drotm.f dscal.f dswap.f dtrmm.f dtrmv.f\
			dsyr2k.f dsyr2.f dsymv.f idamax.f lsame.f xerbla.f\
			dznrm2.f zscal.f sswap.f sdot.f
