AUTOMAKE_OPTIONS = foreign
# builds a version of the lapack library
# with only the code needed by HOMME.
# and executable preqx.
lib_LIBRARIES = liblapack.a
liblapack_a_SOURCES = 	dgebak.f  dgetrs.f  dlahrd.f  dlarfb.f  dlasrt.f  dorgqr.f  dtrsm.f \
			dgebal.f  dhseqr.f  dlaln2.f  dlarf.f   dlassq.f  dorgtr.f  dtrti2.f \
			dgecon.f  dlabad.f  dlamch.f  dlarfg.f  dlaswp.f  drscl.f   dtrtri.f \
			dgeev.f   dlacon.f  dlange.f  dlarft.f  dlatrd.f  dsteqr.f  ieeeck.f \
			dgehd2.f  dlacpy.f  dlanhs.f  dlarfx.f  dlatrs.f  dsterf.f  ilaenv.f \
			dgehrd.f  dladiv.f  dlanst.f  dlartg.f  dorg2l.f  dsyev.f \
			dgetf2.f  dlae2.f   dlansy.f  dlascl.f  dorg2r.f  dsytd2.f \
			dgetrf.f  dlaev2.f  dlanv2.f  dlaset.f  dorghr.f  dsytrd.f \
			dgetri.f  dlahqr.f  dlapy2.f  dlasr.f   dorgql.f  dtrevc.f

